--- a/Leader2.bib
+++ b/Leader2.bib
@@ -9249,3 +9249,14 @@ doi = {10.1177/0956797618808470}
   year={2001},
   publisher={University of California Press}
 }
+
+@article{bates2015,
+  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+  author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
+  journal = {Journal of Statistical Software},
+  year = {2015},
+  volume = {67},
+  number = {1},
+  pages = {1--48},
+  doi = {10.18637/jss.v067.i01},
+}
