* Created all_study_vars * computed text stats

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -172,7 +172,9 @@ Our fourth goal was to explore associations between the principle components of 
 
 # Results
 
-The geographic distribution of the cultures in our sample is displayed in Figure \@ref(fig:geographic), with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provide ethnographic texts for that culture (for details, see Table S1). The `r nrow(leader_text2)` text records from `r length(unique(leadershipdata::documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, with a median word count of X, a mean of X, and standard deviation of X. The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with some records not sex-specific. There were female leaders in almost all types of groups, however, except military and religious. Female leaders did tend to lead at the kin group and other residential subgroups, though: `r female_residential_pct`% of female leaders led at the residential subgroup level, for instance, compared to `r male_residential_pct`% of male leaders.
+The geographic distribution of the cultures in our sample is displayed in Figure \@ref(fig:geographic), with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provide ethnographic texts for that culture (for details, see Table S1). The `r nrow(leader_text2)` text records from `r length(unique(leadershipdata::documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, ranging from `r textstats$min` to `r textstats$max` words, with a median word count of `r textstats$median`, a mean of `r textstats$mean`, and standard deviation of `r textstats$sd`. Of the `r nrow(leader_text2)` text records, `r final_record_count` had evidence for at least one variable in the study.
+
+The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with some records not sex-specific. There were female leaders in almost all types of groups, however, except military and religious. Female leaders did tend to lead at the kin group and other residential subgroups, though: `r female_residential_pct`% of female leaders led at the residential subgroup level, for instance, compared to `r male_residential_pct`% of male leaders.
 
 ```{r geographic, fig.width=15, fig.cap="The geographical distributions of cultures in this analysis. Symbol shapes indicate mode of subsistence and symbol size indicates the number of documents available for that culture."}
 library(maps)
@@ -223,9 +225,9 @@ The most common *qualities* of leaders are being of high social status (document
 
 ## Cluster analyses
 
-Within each cluster analyses, we computed the distance between two variables as $1 - cor (v_i,. v_j)$, so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between uncorrelated variables us close to $2$. Using the pvclust package [@suzuki_pvclust:_2015] we clustered the variables using the matrix of all pairwise distances using the Ward aggolomeration algorithm. 
+Within each cluster analyses, we computed the distance between two variables as $1 - cor (v_i, v_j)$, so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between uncorrelated variables us close to $2$. Using the pvclust package [@suzuki_pvclust:_2015] we clustered the variables using the matrix of all pairwise distances using the Ward aggolomeration algorithm. 
 
-Figure \@ref(fig:qualcluster) displays a dendrogram from the cluster analysis of the `r length(quality_vars)` ledaer quality variables and Figure \@ref(fig:funcluster) displays a dendrogram from the cluster analysis of the `r length(function_vars)`. Each cluster analysis includes two estimates of significance for how strongly each cluster within the dendrogram is supported by the data. We rely on the AU (Approximately Unbiased) *p* values, which are computed by multiscale bootstrap resampling and represented as percentages (e.g., clusters with AU values $>95$ are strongly supported, and the top-level clusters are automatically highlighted by rectangles).
+Figure \@ref(fig:qualcluster) displays a dendrogram from the cluster analysis of the `r length(quality_vars)` leader quality variables and Figure \@ref(fig:funcluster) displays a dendrogram from the cluster analysis of the `r length(function_vars)` leader function variables. Each cluster analysis includes two estimates of significance for how strongly each cluster within the dendrogram is supported by the data. We rely on the AU (Approximately Unbiased) *p* values, which are computed by multiscale bootstrap resampling and represented as percentages (e.g., clusters with AU values $>95$ are strongly supported, and the top-level clusters are automatically highlighted by rectangles).
 
 ```{r qualcluster, fig.cap="Cluster analysis of leader quality variables. Distances are $1 - cor$. Ward agglomeration method. p-values computed with 10,000 bootstrap samples using the pvclust package [@pvclust2015]."}
 # plot(m_pvclust_qual)
