--- a/Leader2.bib
+++ b/Leader2.bib
@@ -7143,7 +7143,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	year = {2003}
 }
 
-@book{r_core_team_r:_2016,
+@book{r_core_team_r2016,
 	address = {Vienna, Austria},
 	title = {R: {A} {Language} and {Environment} for {Statistical} {Computing}},
 	url = {https://www.R-project.org/},
@@ -7152,7 +7152,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	year = {2016}
 }
 
-@book{suzuki_pvclust:_2015,
+@book{suzuki_pvclust2015,
 	title = {pvclust: {Hierarchical} {Clustering} with {P}-{Values} via {Multiscale} {Bootstrap} {Resampling}},
 	url = {https://CRAN.R-project.org/package=pvclust},
 	author = {Suzuki, Ryota and Shimodaira, Hidetoshi},
