Working on introduction and results text.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -10,6 +10,80 @@
   }
   
 
+@book{selznick_leadership_1957,
+	address = {Evanston, IL},
+	title = {Leadership in {Administration}: {A} {Sociological} {Interpretation}},
+	shorttitle = {Leadership in {Administration}},
+	publisher = {Row, Peterson},
+	author = {Selznick, Philip},
+	year = {1957}
+}
+
+
+@article{rich_dynamics_1980,
+	title = {The dynamics of leadership in neighborhood organizations},
+	volume = {60},
+	issn = {0038-4941},
+	url = {www.jstor.org/stable/42860634},
+	number = {4},
+	urldate = {2019-11-27},
+	journal = {Social Science Quarterly},
+	author = {Rich, Richard C.},
+	year = {1980},
+	pages = {570--587},
+	file = {Rich - 1980 - The dynamics of leadership in neighborhood organiz.pdf:/Users/zgarf/Zotero/storage/AFFDNDPD/Rich - 1980 - The dynamics of leadership in neighborhood organiz.pdf:application/pdf}
+}
+
+
+@article{buss_strategies_2006,
+	title = {Strategies of human mating},
+	volume = {15},
+	journal = {Psychological Topics},
+	author = {Buss, D. M.},
+	year = {2006},
+	keywords = {Sexual Selection, Mate Choice},
+	pages = {239--260},
+	annote = {The following values have no corresponding Zotero field:number: 2issn: coden: doi: citation-id: Buss 2006modified-date: 2014-05-09 21:38:33 +0700},
+	file = {Strategies%20of%20human%20mating:/Users/zgarf/Zotero/storage/DL4UUQHN/Strategies of human mating.pdf:application/pdf}
+}
+
+@article{davis_learning_1951,
+	title = {Learning to live in informal groups},
+	volume = {16},
+	journal = {Advanced Management},
+	author = {Davis, Keith},
+	year = {1951},
+	pages = {17--19}
+}
+
+@article{moore_literature_2018,
+	title = {Literature {Review} of {GLOBE}’s {CLT}: {Culturally} {Endorsed} {Implicit} {Leadership} {Theory}},
+	volume = {11},
+	shorttitle = {Literature {Review} of {GLOBE}’s {CLT}},
+	number = {1},
+	journal = {Emerging Leadership Journeys},
+	author = {Moore, Brian T.},
+	year = {2018},
+	pages = {1--13},
+	file = {Full Text:/Users/zgarf/Zotero/storage/6BMMSHYW/Moore - 2018 - Literature Review of GLOBE’s CLT Culturally Endor.pdf:application/pdf}
+}
+  
+
+@article{wofford_factor_1970,
+	title = {Factor analysis of managerial behavior variables},
+	volume = {54},
+	issn = {1939-1854(Electronic),0021-9010(Print)},
+	doi = {10.1037/h0029058},
+	abstract = {Attempts to identify the basic dimensions of several areas of managerial behavior in a broad scope of organizational situations. 136 Ss described the behavior of their supervisors in terms of 183 questionnaire items. 100 of these items were selected for factor analysis. Analysis of the 100 * 100 correlational matrix yielded 5 interpretable factors which provide new insights into the structure of managerial behavior. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+	number = {2},
+	journal = {Journal of Applied Psychology},
+	author = {Wofford, J. C.},
+	year = {1970},
+	keywords = {Factor Analysis, Leadership, Management, Organizational Structure},
+	pages = {169--173},
+	file = {Snapshot:/Users/zgarf/Zotero/storage/XQRCV7YS/1970-11510-001.html:text/html;Wofford - 1970 - Factor analysis of managerial behavior variables.pdf:/Users/zgarf/Zotero/storage/GVY876VJ/Wofford - 1970 - Factor analysis of managerial behavior variables.pdf:application/pdf}
+}
+
 @article{silverman_how_1978,
 	title = {How {Do} {I} {Respect} {Thee}? {Let} {Me} {Count} {The} {Ways}: {Deference} {Towards} {Elderly} {Men} and {Women}},
 	volume = {13},
